# rust-rest-template

./: Cargo.toml  Dockerfile  README.MD
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/config/: config.rs
src/controller/: controller.rs
src/entity/: es_aggregate_snapshots.rs  mod.rs
src/event/: aggregate.rs  command_handler.rs  event.rs  event_store.rs  mod.rs  postgres_event_store.rs
src/event/entity/: es_aggregates.rs  es_events.rs  prelude.rs
